--- a/index.html
+++ b/index.html
@@ -1,63 +1,88 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Проект "Комменты"</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <div class="container">
-      <ul class="comments">
-      </ul>
-      <div class="add-form">
-        <input
-          type="text"
-          class="add-form-name"
-          id="input_name"
-          placeholder="Введите ваше имя"
-        />
-        <textarea
-          type="textarea"
-          class="add-form-text"
-          id="input_comment"
-          placeholder="Введите ваш коментарий"
-          rows="4"
-        ></textarea>
-        <div class="add-form-row">
-          <button class="add-form-button" id="write_button">Написать</button>
+<head>
+  <title>Проект "Комменты"</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <div class="container">
+    <ul class="comments">
+      <!-- <li class="comment">
+        <div class="comment-header">
+          <div>Глеб Фокин</div>
+          <div>12.02.22 12:18</div>
         </div>
+        <div class="comment-body">
+          <div class="comment-text">
+            Это будет первый комментарий на этой странице
+          </div>
+        </div>
+        <div class="comment-footer">
+          <div class="likes">
+            <span class="likes-counter">3</span>
+            <button class="like-button"></button>
+          </div>
+        </div>
+      </li>
+      <li class="comment">
+        <div class="comment-header">
+          <div>Варвара Н.</div>
+          <div>13.02.22 19:22</div>
+        </div>
+        <div class="comment-body">
+          <div class="comment-text">
+            Мне нравится как оформлена эта страница! ❤
+          </div>
+        </div>
+        <div class="comment-footer">
+          <div class="likes">
+            <span class="likes-counter">75</span>
+            <button class="like-button -active-like"></button>
+          </div>
+        </div>
+      </li> -->
+    </ul>
+    <div class="add-form">
+      <input type="text" class="add-form-name" id="input_name" placeholder="Введите ваше имя" />
+      <textarea type="textarea" class="add-form-text" id="input_comment" placeholder="Введите ваш коментарий"
+        rows="4"></textarea>
+      <div class="add-form-row">
+        <button class="add-form-button" id="write_button">Написать</button>
       </div>
     </div>
-  </body>
+  </div>
+</body>
 
-  <script>
-    //массив
-    const comments = [
+<script>
+  //массив
+  const comments = [
 
-      {
-        name: "Глеб Фокин",
-        date: new Date(),
-        text: "Это будет первый комментарий на этой странице",
-        likes: 3,
-        likedIt: false,
-      }, 
-      {
-        name: "Варвара Н.",
-        date: new Date(),
-        text: "Мне нравится как оформлена эта страница! ❤",
-        likes: 75,
-        liked: true,
-      }
+    {
+      name: "Глеб Фокин",
+      date: new Date(),
+      text: "Это будет первый комментарий на этой странице",
+      likes: 3,
+      likedIt: false,
+    },
+    {
+      name: "Варвара Н.",
+      date: new Date(),
+      text: "Мне нравится как оформлена эта страница! ❤",
+      likes: 75,
+      liked: true,
+    }
 
-    ];
+  ];
 
-    //рендеринг функция комментариев
-    const renderFunction = () => {
-      const list = document.querySelector(".comments");
+  //По клику на кнопку «Добавить» создаем шаблонную строку комментария с помощью обратных кавычек
+  const renderFunction = () => {
+    const list = document.querySelector(".comments");
 
-      list.innerHTML = comments.map((comment, index) => {
-        return `
+    list.innerHTML = comments.map((comment, index) => {
+      return `
         <li class="comment" data-index="${index}">
           <div class="comment-header">
             <div>${comment.name}</div>
@@ -76,64 +101,79 @@
           </div>
         </li>
         `;
-      }).join('');
+    }).join('');
 
-      //счётчик лайков
-      const likeButton = document.querySelectorAll(".like-button");
+    //Добавьте обработчик клика на лайк
+    const likeButton = document.querySelectorAll(".like-button");
 
-      for (const likeButtons of likeButton) {
+    for (const likeButtons of likeButton) {
 
-        likeButtons.addEventListener("click", () => {
-          const index = likeButtons.dataset.index;
-          const comment = comments[index];
+      likeButtons.addEventListener("click", (no) => {
 
-          console.log("click like button");
+        console.log("click like button");
+        
+        const index = likeButtons.dataset.index;
+        const comment = comments[index];
 
-          if (comments.likes = comment.liked) {
-            comment.likes--;
-          } else {
-            comment.likes++;
-          }
-          comment.liked = !comment.liked;
+        //При клике на иконку лайка цитирование комментария не должно происходить
+        no.stopPropagation();
 
-          renderFunction();
-        });
-      };
+        if (comments.likes = comment.liked) {
+          comment.likes--;
+        } else {
+          comment.likes++;
+        }
+        comment.liked = !comment.liked;
+
+        renderFunction();
+      });
     };
+
+    //В поле ввода автоматически добавляется текст этого комментария и имя автора.
+    const allCommentsEl = document.querySelectorAll(".comment");
+
+    for (const allCommentEl of allCommentsEl) {
+      allCommentEl.addEventListener("click", () => {
+        const thisComment = comments[allCommentEl.dataset.index];
+        inputComment.value = `❮❮ ${thisComment.name}: ${thisComment.text} ❯❯`;
+      })
+    };
+  };
+  renderFunction();
+
+  //переменные имя, текст комментария и кнопки "написать"
+  const inputName = document.getElementById("input_name");
+  const inputComment = document.getElementById("input_comment");
+  const writeButton = document.getElementById("write_button");
+
+  //Добавляем обработчик события на изменения полей ввода «Имя» и «Комментарий»
+  //Добавляем обработчик события на нажатие кнопки «Добавить»
+  inputName.addEventListener("input", () => {
+    console.log("change inputName");
+  });
+
+  inputComment.addEventListener("input", () => {
+    console.log("change inputComment");
+  });
+
+  writeButton.addEventListener("click", () => {
+    console.log("click write button");
+
+    //В шаблонную строку комментария подставляем значения полей имени и комментария, Обработка HTML-разметки replaceAll
+    const userComment = {
+      name: inputName.value.replaceAll("<", "&lt;").replaceAll(">", "&gt;"),
+      date: new Date(),
+      text: inputComment.value.replaceAll("<", "&lt;").replaceAll(">", "&gt;"),
+      likes: 0,
+    };
+
+    inputName.value = '';
+    inputComment.value = '';
+
+    comments.push(userComment);
+
     renderFunction();
+  });
+</script>
 
-    //переменные имя, текст комментария и кнопки "написать"
-    const inputName = document.getElementById("input_name");
-    const inputComment = document.getElementById("input_comment");
-    const writeButton = document.getElementById("write_button");
-
-    //обработчик события имя
-    inputName.addEventListener("input", () => {
-      console.log("change inputName");
-    });
-
-    //обработчик события коммент
-    inputComment.addEventListener("input", () =>{
-      console.log("change inputComment");
-    });
-    
-    //обработчик события кнопка
-    writeButton.addEventListener("click", () => {
-      console.log("click write button");
-
-      //новый комментарий пользователя
-      const userComment = {
-        name: inputName.value,
-        date: new Date(),
-        text: inputComment.value,
-        likes: 0,
-      };
-
-      inputName.value = '';
-      inputComment.value = '';
-
-      comments.push(userComment);
-      renderFunction();
-    });
-  </script>
 </html>
