--- a/index.html
+++ b/index.html
@@ -10,40 +10,6 @@
 <body>
   <div class="container">
     <ul class="comments">
-      <!-- <li class="comment">
-        <div class="comment-header">
-          <div>Глеб Фокин</div>
-          <div>12.02.22 12:18</div>
-        </div>
-        <div class="comment-body">
-          <div class="comment-text">
-            Это будет первый комментарий на этой странице
-          </div>
-        </div>
-        <div class="comment-footer">
-          <div class="likes">
-            <span class="likes-counter">3</span>
-            <button class="like-button"></button>
-          </div>
-        </div>
-      </li>
-      <li class="comment">
-        <div class="comment-header">
-          <div>Варвара Н.</div>
-          <div>13.02.22 19:22</div>
-        </div>
-        <div class="comment-body">
-          <div class="comment-text">
-            Мне нравится как оформлена эта страница! ❤
-          </div>
-        </div>
-        <div class="comment-footer">
-          <div class="likes">
-            <span class="likes-counter">75</span>
-            <button class="like-button -active-like"></button>
-          </div>
-        </div>
-      </li> -->
     </ul>
     <div class="add-form">
       <input type="text" class="add-form-name" id="input_name" placeholder="Введите ваше имя" />
@@ -158,6 +124,16 @@
 
   writeButton.addEventListener("click", () => {
     console.log("click write button");
+
+    //Нельзя оставить поля комментария и имени пустыми
+    inputName.classList.remove("error");
+    inputComment.classList.remove("error");
+    
+    if ((inputName.value === "") && (inputComment.value === "")) {
+      inputName.classList.add("error");
+      inputComment.classList.add("error");
+      return;
+    }
 
     //В шаблонную строку комментария подставляем значения полей имени и комментария, Обработка HTML-разметки replaceAll
     const userComment = {
