--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       </div>
     </div>
   </div>
+  <script type="module" src="./script.js"></script>
 </body>
 
-<script>
+<!-- <script>
   //массив
   const comments = [
 
@@ -150,6 +151,6 @@
 
     renderFunction();
   });
-</script>
+</script> -->
 
 </html>
